# vanta-admin-theme

./: LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: publish.yml
vanta_admin/: apps.py
vanta_admin/static/admin/css/: theme.admin.css  theme.base.css  theme.css  theme.fonts.css  theme.login.css  theme.responsive.css  theme.tokens.css  two_factor.css
vanta_admin/static/admin/js/: changelist.js  forms.js  messages.js  pagination-jump.js  sidebar.js  vanta-theme.js
vanta_admin/templates/admin/: app_index.html  base.html  base_site.html  change_form.html  change_list.html  filter.html  index.html  login.html  nav_sidebar.html  pagination.html
vanta_admin/templates/admin/includes/: breadcrumbs.html
vanta_admin/templates/two_factor/: _base.html  _base_focus.html  _wizard_actions.html
vanta_admin/templates/two_factor/core/: login.html  setup_complete.html
vanta_admin/templates/two_factor/profile/: disable.html  profile.html
vanta_admin/templatetags/: admin_theme.py
